# Internship

./: .env  .env.example  .env.test  Makefile  README.md  docker-compose.yml  pyproject.toml
deploy/: entrypoint.sh  start-db-init.sh
deploy/compose/common/: entrypoint.sh
deploy/compose/local/: docker-compose.yml  fastapi.dockerfile
deploy/compose/test/: docker-compose.yml
src/: alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: 20240319102305_b618d5773279_.py  20240320085106_525eecc40dad_.py  20240325065851_a86428b8404b_.py  20240328080818_745861e1db08_.py  20240401100754_da0d8af24cde_.py  20240402074315_3103444e0832_.py  20240405101339_79d69bbf4428_.py  20240426142942_54a181f114c5_.py  20240502044500_78e90f1605b2_.py  20240511141504_106ceaebc8dd_.py  20240514065201_fb81a0678da3_.py
src/app/: config.py  containers.py  fastapi.py  typer.py
src/app/api/: deps.py  endpoints.py  exception_handlers.py  schemas.py
src/app/domain/common/: enums.py  exceptions.py  models.py  schemas.py
src/app/domain/storage/attachments/: commands.py  containers.py  queries.py  repositories.py  schemas.py  views.py
src/app/domain/users/: containers.py
src/app/domain/users/auth/: commands.py  queries.py  repositories.py  schemas.py  views.py
src/app/domain/users/core/: commands.py  queries.py  repositories.py  schemas.py
src/app/domain/users/management/: commands.py  queries.py  views.py
src/app/domain/users/permissions/: queries.py  schemas.py  schems.py  services.py
src/app/domain/users/profile/: commands.py  queries.py  schemas.py  views.py
(+6 files in other folders)
