[tool.poetry]
name = "internship"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dependency-injector = "4.41.0"
fastapi = { extras = ["all"], version = "^0.110.0" }
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
asyncpg = "^0.28.0"
a8t-tools = { version = "^0.2.0", extras = ["all"], source = "gitlab" }
typer = "^0.10.0"
logging = "^0.4.9.6"


[[tool.poetry.source]]
name = "gitlab"
url = "https://git.aldera-soft.ru/api/v4/projects/273/packages/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
